[gd_scene load_steps=42 format=3 uid="uid://3valkmk4q21e"]

[ext_resource type="Texture2D" uid="uid://bmrmu62xhglra" path="res://Assets/Graphics/Object_tiles/End Portal Open.png" id="1_mpo25"]
[ext_resource type="Script" path="res://Scripts/Object/door.gd" id="2_n11r6"]
[ext_resource type="AudioStream" uid="uid://b2klj3mgjy8qi" path="res://Assets/Sounds/Effect/open_door.mp3" id="3_rbjl8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ro6vx"]
atlas = ExtResource("1_mpo25")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_flhot"]
atlas = ExtResource("1_mpo25")
region = Rect2(1280, 1920, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj203"]
atlas = ExtResource("1_mpo25")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_m56hk"]
atlas = ExtResource("1_mpo25")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tahe"]
atlas = ExtResource("1_mpo25")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad3p5"]
atlas = ExtResource("1_mpo25")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcmg4"]
atlas = ExtResource("1_mpo25")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd1hh"]
atlas = ExtResource("1_mpo25")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_i428u"]
atlas = ExtResource("1_mpo25")
region = Rect2(0, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_bflm4"]
atlas = ExtResource("1_mpo25")
region = Rect2(320, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wahy"]
atlas = ExtResource("1_mpo25")
region = Rect2(640, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyo1n"]
atlas = ExtResource("1_mpo25")
region = Rect2(960, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fumpr"]
atlas = ExtResource("1_mpo25")
region = Rect2(1280, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1nwa"]
atlas = ExtResource("1_mpo25")
region = Rect2(1600, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcvm0"]
atlas = ExtResource("1_mpo25")
region = Rect2(0, 640, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_moxds"]
atlas = ExtResource("1_mpo25")
region = Rect2(320, 640, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtlco"]
atlas = ExtResource("1_mpo25")
region = Rect2(640, 640, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4ajk"]
atlas = ExtResource("1_mpo25")
region = Rect2(960, 640, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mlky"]
atlas = ExtResource("1_mpo25")
region = Rect2(1280, 640, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrwum"]
atlas = ExtResource("1_mpo25")
region = Rect2(1600, 640, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bv3s"]
atlas = ExtResource("1_mpo25")
region = Rect2(0, 960, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_exuit"]
atlas = ExtResource("1_mpo25")
region = Rect2(320, 960, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_24k3a"]
atlas = ExtResource("1_mpo25")
region = Rect2(640, 960, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kivg"]
atlas = ExtResource("1_mpo25")
region = Rect2(960, 960, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku6e3"]
atlas = ExtResource("1_mpo25")
region = Rect2(1280, 960, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wcsv"]
atlas = ExtResource("1_mpo25")
region = Rect2(1600, 960, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehybp"]
atlas = ExtResource("1_mpo25")
region = Rect2(0, 1280, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hwyu"]
atlas = ExtResource("1_mpo25")
region = Rect2(320, 1280, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_k01qi"]
atlas = ExtResource("1_mpo25")
region = Rect2(640, 1280, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0lg1"]
atlas = ExtResource("1_mpo25")
region = Rect2(960, 1280, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6jol"]
atlas = ExtResource("1_mpo25")
region = Rect2(1280, 1280, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_487up"]
atlas = ExtResource("1_mpo25")
region = Rect2(1600, 1280, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jfsv"]
atlas = ExtResource("1_mpo25")
region = Rect2(0, 1600, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsmah"]
atlas = ExtResource("1_mpo25")
region = Rect2(320, 1600, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxswl"]
atlas = ExtResource("1_mpo25")
region = Rect2(640, 1600, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a63f"]
atlas = ExtResource("1_mpo25")
region = Rect2(960, 1600, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_115js"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro6vx")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flhot")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj203")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m56hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tahe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad3p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcmg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd1hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i428u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bflm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wahy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyo1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fumpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1nwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcvm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moxds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtlco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4ajk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mlky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrwum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bv3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exuit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24k3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kivg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku6e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wcsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehybp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hwyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k01qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0lg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6jol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jfsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsmah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxswl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a63f")
}],
"loop": true,
"name": &"transform",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wl8st"]
size = Vector2(190, 330)

[node name="Door" type="AnimatedSprite2D"]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_115js")
animation = &"transform"
frame = 20
script = ExtResource("2_n11r6")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(25, 55)
shape = SubResource("RectangleShape2D_wl8st")

[node name="open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rbjl8")
volume_db = 8.0

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="animation_looped" from="." to="." method="_on_animation_looped"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
